<resources>
    <string name="app_name">Calculo IMC</string>
    <string name="textPeso">Peso em Kg</string>
    <string name="pesoEmKg">pesoEmKg</string>
    <string name="rbClassificacaoIdade">rbClassificacaoIdade</string>
    <string name="rbAdulto">Adulto</string>
    <string name="lblAdulto">Adulto</string>
    <string name="lblIdoso">Idoso</string>
    <string name="rbIdoso">Idoso</string>
    <string name="btnCacular">Calcular</string>
    <string name="btn_calcular_lbl">Calcular</string>
    <string name="calculadoraImc">CALCULADORA IMC</string>
    <string name="calcularImc">CALCULADORA IMC</string>
    <string name="altura">altura</string>
    <string name="textAltura">Altura em Metros</string>
    <string name="nome">Nome</string>
    <string name="referencia">Este aplicativo serve de referência para facilitar a execução do cálculo, se houver dúvida sobre sua condição atual, um médico deve ser consultado!</string>
    <string name="baixoPesoAdulto">Olá senhor(a) %1$s seu IMC é %2$s IMC abaixo de 18.5 Abaixo do Peso Você está abaixo do peso ideal. Isso pode ser apenas uma característica pessoal, mas também pode ser um sinal de desnutrição ou de algum problema de saúde. Caso esteja perdendo peso sem motivo aparente, procure um médico.</string>
    <string name="pesoNormalAdulto"> Olá senhor(a) %1$s seu IMC é %2$s IMC entre 18.5 e 24.9, seu IMC está dentro da normalidade.</string>
    <string name="sobrePesoAdulto">Olá senhor(a) %1$s seu IMC é %2$s IMC entre 25.0 e 29.9 Sobrepeso Atenção! Alguns quilos a mais já são suficientes para que algumas pessoas desenvolvam doenças associadas, como diabetes e hipertensão. É importante rever seus hábitos. Procure um médico.</string>
    <string name="classe1">Olá senhor(a) %1$s seu IMC é %2$s IMC entre 30.0 e 34.9 Obesidade grau I Sinal de alerta! O excesso de peso é fator de risco para desenvolvimento de outros problemas de saúde. A boa notícia é que uma pequena perda de peso já traz benefícios à saúde. Procure um médico para definir o tratamento mais adequado para você</string>
    <string name="classe2">Olá senhor(a) %1$s seu IMC é %2$s IMC entre 35.0 e 39.9 Obesidade grau II Sinal vermelho! Ao atingir este nível de IMC, o risco de doenças associadas está entre alto e muito alto. Busque ajuda de um profissional de saúde; não perca tempo.</string>
    <string name="classe3">Olá senhor(a) %1$s seu IMC é %2$s IMC acima de 40 Obesidade grau III Sinal vermelho! Ao atingir este nível de IMC, o risco de doenças associadas é muito alto. Busque ajuda de um profissional de saúde; não perca tempo.</string>
    <string name="baixoPesoIdoso">Olá senhor(a) %1$s seu IMC é %2$s IMC  Abaixo de 22.0 Abaixo do Peso Você está abaixo do peso ideal. Isso pode ser apenas uma característica pessoal, mas também pode ser um sinal de desnutrição ou de algum problema de saúde. Caso esteja perdendo peso sem motivo aparente, procure um médico.</string>
    <string name="pesoNormalIdoso">Olá senhor(a) %1$s seu IMC é %2$s IMC  IMC entre 22.0 e 27.0, seu IMC esta dentro na normalidade.</string>
    <string name="sobrePesoIdoso">Olá senhor(a) %1$s seu IMC é %2$s IMC  IMC acima de 27.0 Sobrepeso Atenção! Alguns quilos a mais já são suficientes para que algumas pessoas desenvolvam doenças associadas, como diabetes e hipertensão. É importante rever seus hábitos. Procure um médico.</string>
</resources>